# PySallad

Documents/Code/Sallad/JsSallad/: crypt.js
Documents/Code/Sallad/PySallad/: pyproject.toml
Documents/Code/Sallad/PySallad/src/Sallad/: conversion.py  cryption.py  generation.py  sorter.py
