[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Sallad"
version = "1.0.1"
authors = [
  { name="Dallas Baker", email="lildallas463@gmai.com" },
]
description = "A Package that makes everyday life easier"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/MonkeyRetard/Sallad"
"Bug Tracker" = "https://github.com/MonkeyRetard/Sallad/issues"